apps/ingress/ingress.generic.yaml
# Copyright 2017 Google Inc. All Rights Reserved.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wap-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 8080
      - path: /admin/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin
            port:
              number: 8080
      - path: /assets/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: game
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 8080
